# infrastructure-asfyaml

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  README.md  asfyaml.py  dataclasses.py  dataobjects.py  envvars.py  mappings.py  pylintrc  pyproject.toml  repository.py
.github/workflows/: basic-validator.yaml
asfyaml/: asfyaml.py  cli.py  dataobjects.py  envvars.py  mappings.py  validators.py
asfyaml/feature/: __init__.py  jekyll.py  notifications.py  pelican.py  project.py  testfeature.py  website_publish.py  website_staging.py
asfyaml/feature/github/: __init__.py  autolink.py  branch_protection.py  collaborators.py  constants.py  copilot_code_review.py  custom_subjects.py  del_branch_on_merge.py  deployment_environments.py  features.py  housekeeping.py  immutable_releases.py  merge_buttons.py  merge_commit_settings.py  metadata.py  pages.py  pr_creation_cap.py  protected_tags.py  pull_requests.py  rulesets.py  squash_merge_commit_settings.py
docs/: ASFYamlFeature.md  testing.md
docs/api/: asfyaml.html  dataobjects.html  envvars.html  feature.github.html  feature.html  genindex.html  index.html  mappings.html  modules.html  objects.inv  py-modindex.html  repository.html  search.html  searchindex.js
docs/api/_static/: custom.css
docs/features/: index.md  readme.md
docs/sphinx-src/: asfyaml.rst  conf.py  dataobjects.rst  envvars.rst  feature.github.rst  feature.rst  index.rst  mappings.rst  modules.rst
feature/: __init__.py  github.py  notifications.py  testfeature.py  website_publish.py  website_staging.py
feature/github/: __init__.py  autolink.py  features.py  labels.py  metadata.py  pages.py
schemata/: asfyaml.schema.json
schemata/feature/: github.schema.json  notifications.schema.json
schemata/feature/github/: branch_protection.schema.json
tests/: basic-dev-env.yaml  conftest.py  github_autolink.py  github_branch_protection.py  github_branch_protection_patterns.py  github_copilot_code_review.py  github_custom_subjects.py  github_deployment_environments.py  github_features.py  github_immutable_releases.py  github_merge_buttons.py  github_merge_commit_settings.py  github_pages.py  github_pr_creation_cap.py  github_pull_requests.py  github_rulesets.py  helpers.py  project_metadata.py  validator.py  website_publishing.py
tests/data/: basic-dev-env.yaml  mailinglists.json
