[tool.poetry]
name = "asfyaml"
version = "0.1.0"
description = ""
authors = ["Daniel Gruno <humbedooh@apache.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "*"
pyyaml = "*"
strictyaml = "*"
easydict = "*"
asfpy = "*"
PyGithub = "^2.5.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = ">=2.20.0"
ruff = ">=0.9.4"
types-requests = ">=2.32.0.20250306"
types-PyYAML = ">=6.0.12.20241230"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths  = ["tests"]
pythonpath = ["."]
python_files = "*.py"

[tool.poetry.scripts]
asfyml-run = "asfyaml.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["docs", "tests"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "E402",  # not top level import
  "E501",  # line too long
  "F401",  # unused imports
  "F403",  # star import
  "N806",  # uppercase variables
  "N813",  # lowercase imports
  "N818"   # exception name
]
select = [
  # "I",   # isort, disable for now
  "E",
  "W",
  "F",
  "N",   # pep8-naming
  "RUF", # ruff-checks
  # "C90", # compexity checks, disable for now
  "TID", # flake8-tidy-imports
  "TC",  # flake8-type-checking
  # "UP"   # pyupgrade, disable for now
]

[tool.mypy]
python_version = "3.10"
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["strictyaml.*", "easydict.*", "asfpy.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
